Fix issue, pomodoro timer cannot work on Safari, since it has no Number.parseInt() method, just use parseInt(). And update font.

--- a/client/assets/css/styles.css
+++ b/client/assets/css/styles.css
@@ -42,7 +42,6 @@ ul.nav {
 
 .fc-pomodoro-timer {
   color: red;
-  font-family: fantasy;
   font-size: 50px;
   text-align: center;
 }
